Revert "Update file paths in HTML files"
This reverts commit 007c78f01c0fef2b59fb8635c103ec8d04c1c8d7.

--- a/public/settings/developers.html
+++ b/public/settings/developers.html
@@ -17,8 +17,8 @@
         var n = c.documentElement, t = " w-mod-";
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
     }(window, document);</script>
-    <link href="../app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="../app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+    <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="../images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
     <script type="text/javascript">
         window['__ls_namespace'] = '__ls';
         window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -76,7 +76,7 @@
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-        <div class="dvd_box"><img src="../app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
+        <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
             <div class="page_loader--text">Loading</div>
         </div>
@@ -87,13 +87,13 @@
         <div id="nav_sb" class="nav_sb">
             <div class="w-layout-blockcontainer top_nav--wrp w-container">
                 <div class="sb_logo--wrp">
-                    <a href="/app/" class="sb_logo_link--wrp w-inline-block"><img
-                            src="../app/images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
+                    <a href="/" class="sb_logo_link--wrp w-inline-block"><img
+                            src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
                             class="sb_logo--img"></a>
                 </div>
                 <div class="top_nav_menu_link--wrp">
                     <div class="top_nav_menu_items--wrp settings">
-                        <a href="/app/" class="top_nav--link back w-inline-block">
+                        <a href="/" class="top_nav--link back w-inline-block">
                             <div class="top_nav_link--text white">Settings</div>
                         </a>
                         <a href="../settings/account" class="top_nav--link account w-inline-block">
@@ -123,7 +123,7 @@
                         <a href="/docs/api-reference/introduction" target="_blank"
                            class="sect_crd_rt_cta w-inline-block w-clearfix">
                             <div class="sect_crd_rt_cta_txt">API Reference</div>
-                            <img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                            <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                  class="rt_cta_ico">
                         </a>
                         <div class="sect_crd_tit w-clearfix">
