--- a/public/processing-payment.html
+++ b/public/processing-payment.html
@@ -6,16 +6,16 @@
   <meta content="Processing Payment" property="og:title">
   <meta content="Processing Payment" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="app/css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="app/css/components.css" rel="stylesheet" type="text/css">
-  <link href="app/css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="css/components.css" rel="stylesheet" type="text/css">
+  <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -56,7 +56,7 @@
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-      <div class="dvd_box"><img src="app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+      <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
       </div>
     </div>
@@ -73,18 +73,18 @@
               </div>
               <div class="w-layout-grid bgico_cta_grid">
                 <div class="bgico_cta_btn w-clearfix">
-                  <a href="app/new" class="sect_crd_rt_cta w-inline-block w-clearfix">
-                    <div class="sect_crd_rt_cta_txt">Add Proxies</div><img src="app/images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
+                  <a href="new" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                    <div class="sect_crd_rt_cta_txt">Add Proxies</div><img src="images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
                   </a>
                 </div>
                 <div class="bgico_cta_btn w-clearfix">
-                  <a href="app/allocate" class="sect_crd_rt_cta w-inline-block w-clearfix">
-                    <div class="sect_crd_rt_cta_txt">Allocate Time</div><img src="app/images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
+                  <a href="allocate" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                    <div class="sect_crd_rt_cta_txt">Allocate Time</div><img src="images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
                   </a>
                 </div>
                 <div class="bgico_cta_btn w-clearfix">
-                  <a href="app/dashboard" class="sect_crd_rt_cta w-inline-block w-clearfix">
-                    <div class="sect_crd_rt_cta_txt">Dashboard</div><img src="app/images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
+                  <a href="dashboard" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                    <div class="sect_crd_rt_cta_txt">Dashboard</div><img src="images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
                   </a>
                 </div>
               </div>
@@ -200,7 +200,7 @@
     <div id="cmdb" class="cmdb_hide"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="app/js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+  <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
   <script src="https://scripts.illusory.io/scripts/pages/processing-payment.full.js"></script>
 </body>
