--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -14,8 +14,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="../app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="../images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -56,7 +56,7 @@
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-      <div class="dvd_box"><img src="../app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+      <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
       </div>
     </div>
@@ -66,11 +66,11 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="/app/" class="sb_logo_link--wrp w-inline-block"><img src="../app/images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="/" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp settings">
-              <a href="/app/" class="top_nav--link back w-inline-block">
+              <a href="/" class="top_nav--link back w-inline-block">
                 <div class="top_nav_link--text white">Settings</div>
               </a>
               <a href="../settings/account" class="top_nav--link account w-inline-block">
@@ -187,7 +187,7 @@
               </div>
               <div class="sect_crd--divider"></div>
               <div class="notice_subtext--wrap center w-clearfix">
-                <div class="notice--text">Additional discounts apply for bulk orders. All savings are subject to change</div><img src="../app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+                <div class="notice--text">Additional discounts apply for bulk orders. All savings are subject to change</div><img src="../images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
                 <div class="info--wrap sect-crd right">
                   <div class="info_grid--wrap">
                     <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -268,7 +268,7 @@
                 </div>
                 <div class="sect_crd--divider"></div>
                 <div class="notice_subtext--wrap center w-clearfix">
-                  <div class="notice--text">Additional discounts apply for bulk orders. All savings are subject to change</div><img src="../app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+                  <div class="notice--text">Additional discounts apply for bulk orders. All savings are subject to change</div><img src="../images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
                   <div class="info--wrap sect-crd right">
                     <div class="info_grid--wrap">
                       <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -300,7 +300,7 @@
               <div class="sect_block_tit--wrap w-clearfix">
                 <div class="sect_block_tit--text">Are you a member of blackhatworld.com?</div>
                 <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                 </a>
               </div>
               <div class="sect_block--text">Select either one</div>
@@ -328,7 +328,7 @@
               <div class="sect_block_tit--wrap w-clearfix">
                 <div class="sect_block_tit--text">You’ll need to create an account</div>
                 <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                 </a>
               </div>
               <div class="sect_block_text--wrap">
@@ -348,7 +348,7 @@
               <div class="sect_block_tit--wrap w-clearfix">
                 <div class="sect_block_tit--text">Great! What is your forum username?</div>
                 <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                 </a>
               </div>
               <div class="sect_block_text--wrap">
@@ -386,7 +386,7 @@
               <div class="sect_block_tit--wrap w-clearfix">
                 <div class="sect_block_tit--text">Got it! Here is your license key</div>
                 <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                 </a>
               </div>
               <div class="sect_block_text--wrap">
@@ -483,7 +483,7 @@
               <div class="sect_block_tit--wrap w-clearfix">
                 <div class="sect_block_tit--text">All done?</div>
                 <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                 </a>
               </div>
               <div class="sect_block_text--wrap">
@@ -506,7 +506,7 @@
               <div class="sect_block_tit--wrap w-clearfix">
                 <div class="sect_block_tit--text">Our team is reviewing</div>
                 <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                 </a>
               </div>
               <div class="sect_block_text--wrap">
