Update UI texts in new.html and allocate.html
Several UI texts on new.html and allocate.html have been updated. These changes affect the modal's subtext, section card's subtitle, and action button text. They aim to improve clarity and user-friendliness by providing context-specific instructions and details.

--- a/public/allocate.html
+++ b/public/allocate.html
@@ -68,7 +68,7 @@
           <div class="modal_crd_tit--wrap">
             <div class="modal_crd_tit">
               <div class="modal_crd_tit_txt">Finalize</div>
-              <div class="modal_crd_subtxt">Confirm pending changes to your proxies</div>
+              <div class="modal_crd_subtxt">Changes occur instantly after confirming</div>
             </div>
             <div class="modal_dvdr_12"></div>
           </div>
