--- a/public/new.html
+++ b/public/new.html
@@ -68,7 +68,7 @@
           <div class="modal_crd_tit--wrap">
             <div class="modal_crd_tit">
               <div class="modal_crd_tit_txt">Finalize</div>
-              <div class="modal_crd_subtxt">Confirm proxy additions to your account</div>
+              <div class="modal_crd_subtxt">Product available instantly after confirming</div>
             </div>
             <div class="modal_dvdr_12"></div>
           </div>
@@ -117,7 +117,7 @@
           <div class="mod_crd_detail--wrap">
             <div class="w-layout-grid qstack_c2">
               <div class="w-layout-cell lt_c">
-                <div class="sect_crd_subtxt">Funds After Additions</div>
+                <div class="sect_crd_subtxt">Funds After Deployment</div>
               </div>
               <div class="w-layout-cell rt_c">
                 <div modal_det="diff" class="sect_crd_subtxt white">$0</div>
@@ -158,7 +158,7 @@
                     </lottie-player>
                   </div>
                 </div>
-                <div class="action_btn_text">Deploy Proxies</div>
+                <div class="action_btn_text">Dpel</div>
               </div>
             </div>
             <div class="mod_btn_wrp w-clearfix">
