Corrected button text in new.html
The button text in new.html that was previously abbreviated to "Dpel" has been corrected. The updated text, which is now "Confirm Deployment", is more explicit and user-friendly, providing clearer context and instructions to users.

--- a/public/new.html
+++ b/public/new.html
@@ -158,7 +158,7 @@
                     </lottie-player>
                   </div>
                 </div>
-                <div class="action_btn_text">Dpel</div>
+                <div class="action_btn_text">Confirm Deployment</div>
               </div>
             </div>
             <div class="mod_btn_wrp w-clearfix">
