Update CSS and JS source paths across all HTML files
The source paths for all CSS and JS files across all HTML pages were changed. The URLs now point to the '/app' directory in the '/www.illusory.io' domain, instead of the previous individual directories. This change has been done to maintain consistency and to allow all files to be retrieved from the same place, simplifying management and potential debugging.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -70,7 +70,7 @@
         }
     </style>
 
-    <link rel="stylesheet" href="https://styles.illusory.io/css/dashboard.full.css">
+    <link rel="stylesheet" href="https://www.illusory.io/app/css/dashboard.full.css">
 
 </head>
 <body class="body dark">
@@ -1386,7 +1386,7 @@
         crossorigin="anonymous"></script>
 <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
-<script src="https://scripts.illusory.io/scripts/pages/dashboard.full.js"></script>
+<script src="https://www.illusory.io/app/scripts/pages/dashboard.full.js"></script>
 <script>
     $(document).ready(function () {
         const targetElement = document.querySelector(".bdy_v2");
