--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     }
   </style>
 
-  <link rel="stylesheet" href="https://styles.illusory.io/css/start.full.css">
+  <link rel="stylesheet" href="https://www.illusory.io/app/css/start.full.css">
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -393,6 +393,6 @@
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
-<script src="https://scripts.illusory.io/scripts/pages/start.full.js"></script>
+<script src="https://www.illusory.io/app/scripts/pages/start.full.js"></script>
 </body>
 </html>
