--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -51,7 +51,7 @@
 }
 </style>
 
-  <link rel="stylesheet" href="https://styles.illusory.io/css/account.full.css">
+  <link rel="stylesheet" href="https://www.illusory.io/app/css/account.full.css">
 
 </head>
 <body class="body dark">
@@ -139,7 +139,7 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
-  <script src="https://scripts.illusory.io/scripts/pages/account.full.js"></script>
+  <script src="https://www.illusory.io/app/scripts/pages/account.full.js"></script>
   <script>
 $(document).ready(function () {
   const targetElement = document.querySelector(".bdy_v2");
