--- a/public/settings/developers.html
+++ b/public/settings/developers.html
@@ -70,7 +70,7 @@
         }
     </style>
 
-    <link rel="stylesheet" href="https://styles.illusory.io/css/developers.full.css">
+    <link rel="stylesheet" href="https://www.illusory.io/app/css/developers.full.css">
 
 </head>
 <body class="body dark">
@@ -306,7 +306,7 @@
         crossorigin="anonymous"></script>
 <script src="../js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
-<script src="https://scripts.illusory.io/scripts/pages/developers.full.js"></script>
+<script src="https://www.illusory.io/app/scripts/pages/developers.full.js"></script>
 <script>
     $(document).ready(function () {
         const targetElement = document.querySelector(".bdy_v2");
