--- a/public/app/help.html
+++ b/public/app/help.html
@@ -37,7 +37,7 @@
         }
     </style>
 
-    <link rel="stylesheet" href="../css/help.full.css">
+    <link rel="stylesheet" href="css/help.full.css">
 </head>
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -649,7 +649,7 @@
         crossorigin="anonymous"></script>
 <script src="../js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
-<script src="../scripts/pages/help.full.js"></script>
+<script src="scripts/pages/help.full.js"></script>
 <script>
     $(document).ready(function () {
         const targetElement = document.querySelector(".bdy_v2");
