--- a/public/app/help.html
+++ b/public/app/help.html
@@ -10,9 +10,9 @@
     <meta content="Member" property="og:title">
     <meta content="Member" property="twitter:title">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="../css/normalize.css" rel="stylesheet" type="text/css">
-    <link href="../css/components.css" rel="stylesheet" type="text/css">
-    <link href="../css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+    <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="css/components.css" rel="stylesheet" type="text/css">
+    <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -21,8 +21,8 @@
         var n = c.documentElement, t = " w-mod-";
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
     }(window, document);</script>
-    <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="../images/webclip.png" rel="apple-touch-icon">
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="images/webclip.png" rel="apple-touch-icon">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@0.4.0/dist/lottie-player.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
@@ -42,7 +42,7 @@
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-        <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
+        <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt=""
                                   class="eye">
             <div class="page_loader--text">Loading</div>
         </div>
@@ -54,7 +54,7 @@
             <div class="w-layout-blockcontainer top_nav--wrp w-container">
                 <div class="sb_logo--wrp">
                     <a href="/app" class="sb_logo_link--wrp w-inline-block"><img
-                            src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
+                            src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt=""
                             class="sb_logo--img"></a>
                 </div>
                 <div class="top_nav_menu_link--wrp">
@@ -62,14 +62,14 @@
                         <a href="/app" class="top_nav--link back w-inline-block">
                             <div class="top_nav_link--text white">Settings</div>
                         </a>
-                        <a href="../settings/account" class="top_nav--link account w-inline-block">
+                        <a href="settings/account" class="top_nav--link account w-inline-block">
                             <div class="top_nav_link--text">Account</div>
                         </a>
-                        <a href="../settings/member" aria-current="page"
+                        <a href="settings/member" aria-current="page"
                            class="top_nav--link member w-inline-block w--current">
                             <div class="top_nav_link--text">Member Discount</div>
                         </a>
-                        <a href="../settings/developers" class="top_nav--link dev w-inline-block">
+                        <a href="settings/developers" class="top_nav--link dev w-inline-block">
                             <div class="top_nav_link--text">Developers</div>
                         </a>
                     </div>
@@ -142,7 +142,7 @@
                                     <div class="input_check--wrap"></div>
                                     <div lottie_ldr="confirm_username" class="lottie_btn_ldr"
                                          data-animation-type="lottie"
-                                         data-src="../documents/chipped-circle-loader-v3.json" data-loop="1"
+                                         data-src="documents/chipped-circle-loader-v3.json" data-loop="1"
                                          data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                                          data-default-duration="1" data-duration="0.65"></div>
                                 </div>
@@ -197,7 +197,7 @@
                             <div class="notice--text">Additional discounts apply for bulk orders. All savings are
                                 subject to change
                             </div>
-                            <img src="../images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
+                            <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
                                  class="info_circle_duo--icon">
                             <div class="info--wrap sect-crd right">
                                 <div class="info_grid--wrap">
@@ -218,7 +218,7 @@
     <div page_content="member_enable" class="page_content--container">
         <div class="pg_hdr">
             <div class="pg_hdr_content">
-                <a href="../settings/account" class="pg_hdr_close w-inline-block"></a>
+                <a href="settings/account" class="pg_hdr_close w-inline-block"></a>
                 <div class="pg_hdr_close_dvdr"></div>
                 <div class="pg_hdr_txt_wrp">
                     <div class="pg_hdr_tit">Enable Member Discount</div>
@@ -289,7 +289,7 @@
                                 <div class="notice--text">Additional discounts apply for bulk orders. All savings are
                                     subject to change
                                 </div>
-                                <img src="../images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
+                                <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
                                      class="info_circle_duo--icon">
                                 <div class="info--wrap sect-crd right">
                                     <div class="info_grid--wrap">
@@ -329,7 +329,7 @@
                             <div class="sect_block_tit--text">Are you a member of blackhatworld.com?</div>
                             <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                                 <div class="sect_crd_rt_cta_txt">Stock Alerts</div>
-                                <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                                <img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                      class="rt_cta_ico">
                             </a>
                         </div>
@@ -361,7 +361,7 @@
                             <div class="sect_block_tit--text">You’ll need to create an account</div>
                             <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                                 <div class="sect_crd_rt_cta_txt">Stock Alerts</div>
-                                <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                                <img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                      class="rt_cta_ico">
                             </a>
                         </div>
@@ -386,7 +386,7 @@
                             <div class="sect_block_tit--text">Great! What is your forum username?</div>
                             <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                                 <div class="sect_crd_rt_cta_txt">Stock Alerts</div>
-                                <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                                <img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                      class="rt_cta_ico">
                             </a>
                         </div>
@@ -437,7 +437,7 @@
                             <div class="sect_block_tit--text">Got it! Here is your license key</div>
                             <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                                 <div class="sect_crd_rt_cta_txt">Stock Alerts</div>
-                                <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                                <img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                      class="rt_cta_ico">
                             </a>
                         </div>
@@ -556,7 +556,7 @@
                             <div class="sect_block_tit--text">All done?</div>
                             <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                                 <div class="sect_crd_rt_cta_txt">Stock Alerts</div>
-                                <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                                <img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                      class="rt_cta_ico">
                             </a>
                         </div>
@@ -585,7 +585,7 @@
                             <div class="sect_block_tit--text">Our team is reviewing</div>
                             <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                                 <div class="sect_crd_rt_cta_txt">Stock Alerts</div>
-                                <img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
+                                <img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt=""
                                      class="rt_cta_ico">
                             </a>
                         </div>
@@ -607,7 +607,7 @@
                 <div err_alert_ind="true" class="err_alert_ind_small orange">
                     <div class="btn_ldr_wrp w-embed">
                         <lottie-player class="lottie_btn_ldr realtime" err_item_ldr="realtime"
-                                       src="../documents/realtime-loader-cropped.json" background="transparent"
+                                       src="documents/realtime-loader-cropped.json" background="transparent"
                                        style="display: flex;">
                         </lottie-player>
                     </div>
@@ -647,7 +647,7 @@
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-<script src="../js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+<script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
 <script src="scripts/pages/help.full.js"></script>
 <script>
