--- a/public/app/help.html
+++ b/public/app/help.html
@@ -16,47 +16,12 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
-  <script type="text/javascript">
-    window['__ls_namespace'] = '__ls';
-    window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
-    !function(w, d, t, u, n) {
-          if (n in w) {if(w.console && w.console.log) { w.console.log('LiveSession namespace conflict. Please set window["__ls_namespace"].');} return;}
-          if (w[n]) return; var f = w[n] = function() { f.push ? f.push.apply(f, arguments) : f.store.push(arguments)};
-          if (!w[n]) w[n] = f; f.store = []; f.v = "1.1";
-          var ls = d.createElement(t); ls.async = true; ls.src = u;
-          var s = d.getElementsByTagName(t)[0]; s.parentNode.insertBefore(ls, s);
-      }(window, document, 'script', window['__ls_script_url'], window['__ls_namespace']);
-      __ls("init", "8763f02d.112cf6e4", { keystrokes: true, rootHostname : '.illusivecompany.art' });
-      __ls("newPageView");
-    </script>
-  <!--  END LiveSession.io code  -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@0.4.0/dist/lottie-player.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@3.1.5/lib/bodyScrollLock.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios@1.3.2/dist/axios.min.js"></script>
-  <style>
-  body {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-  }
-  #signOutLink {
-    display: none;
-  }
-@media screen and (max-width: 990px) {
-  .signoutlink {
-    display: block;
-  }
-}
-</style>
-  <!-- <script type="application/javascript">
-  function getIP(json) { 
-    sessionStorage.setItem('ip_address', json.ip);
-  }
-</script>
-<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://staging.illusory.io/app/css/help.full.js">
+  <link rel="stylesheet" href="css/help.full.js">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -71,20 +36,20 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="index.html" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="index" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp settings">
-              <a href="index.html" class="top_nav--link back w-inline-block">
+              <a href="index" class="top_nav--link back w-inline-block">
                 <div class="top_nav_link--text white">Settings</div>
               </a>
-              <a href="settings/account.html" class="top_nav--link account w-inline-block">
+              <a href="settings/account" class="top_nav--link account w-inline-block">
                 <div class="top_nav_link--text">Account</div>
               </a>
-              <a href="settings/member.html" class="top_nav--link member w-inline-block">
+              <a href="settings/member" class="top_nav--link member w-inline-block">
                 <div class="top_nav_link--text">Member Discount</div>
               </a>
-              <a href="settings/developers.html" class="top_nav--link dev w-inline-block">
+              <a href="settings/developers" class="top_nav--link dev w-inline-block">
                 <div class="top_nav_link--text">Developers</div>
               </a>
             </div>
@@ -209,12 +174,11 @@
     <div page_content="member_enable" class="page_content--container">
       <div class="pg_hdr">
         <div class="pg_hdr_content">
-          <a href="index.html" class="pg_hdr_close w-inline-block"></a>
+          <a href="index" class="pg_hdr_close w-inline-block"></a>
           <div class="pg_hdr_close_dvdr"></div>
           <div class="pg_hdr_txt_wrp">
             <div class="pg_hdr_tit">Support Request</div>
           </div>
-          <div id="cmdb" class="cmdb_hide"></div>
         </div>
       </div>
       <div class="page_content--inner">
@@ -590,7 +554,7 @@
   <script>
 
 </script>
-  <script src="https://staging.illusory.io/app/scripts/pages/help.full.js"></script>
+  <script src="/scripts/pages/help.full.js"></script>
   <script>
 $(document).ready(function () {
   const targetElement = document.querySelector(".bdy_v2");
