Update script source URL path in help.html
Updated the URL path of the script source from an absolute to a relative path in help.html. This change should improve the flexibility and maintenance of the file, and potentially enhance its performance. Unnecessary or redundant scripts and styles were also removed to improve the file's readability.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -554,7 +554,7 @@
   <script>
 
 </script>
-  <script src="/scripts/pages/help.full.js"></script>
+  <script src="scripts/pages/help.full.js"></script>
   <script>
 $(document).ready(function () {
   const targetElement = document.querySelector(".bdy_v2");
