--- a/public/app/help.html
+++ b/public/app/help.html
@@ -550,7 +550,7 @@
     <div id="cmdb" class="cmdb_hide"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/illusivecompanyart.js" type="text/javascript"></script>
+  <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
   <script>
 
 </script>
