--- a/public/app/help.html
+++ b/public/app/help.html
@@ -8,7 +8,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/illusivecompanyart.css" rel="stylesheet" type="text/css">
+  <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -21,7 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@3.1.5/lib/bodyScrollLock.js"></script>
-  <link rel="stylesheet" href="css/help.full.js">
+  <link rel="stylesheet" href="css/help.full.css">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
