Refactor help page HTML and update related CSS styles
The help.html page's structure was revised by renaming elements and adjusting input field properties. Corresponding CSS classes were also updated to enhance visual consistency and functionality. Specifically, modifications were made to the 'textarea--message' input form and related stylings have been improved for better user experience.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -404,7 +404,7 @@
                 </div>
               </div>
             </div>
-            <div sect_block="username" class="sect_block form_block short">
+            <div sect_block="subject" class="sect_block form_block short">
               <div class="sect_block_tit--wrap">
                 <div class="sect_block_tit--text">Subject</div>
               </div>
@@ -415,12 +415,12 @@
               <div class="input_grid--wrap">
                 <div class="w-layout-grid input--grid">
                   <div class="input--wrap w-clearfix">
-                    <div class="input_embed--wrap username w-embed"><input autocomplete="off" member_input="username" type="search" class="ill_input username"></div>
+                    <div class="input_embed--wrap username w-embed"><input autocomplete="off" help_input="subject" type="search" class="ill_input subject"></div>
                   </div>
                 </div>
               </div>
             </div>
-            <div sect_block="username" class="sect_block form_block">
+            <div sect_block="message" class="sect_block form_block">
               <div class="sect_block_tit--wrap">
                 <div class="sect_block_tit--text">Message</div>
               </div>
@@ -431,7 +431,7 @@
               <div class="input_grid--wrap">
                 <div class="w-layout-grid input--grid">
                   <div class="input--wrap w-clearfix">
-                    <div class="textarea_embed--wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input" rows="4" cols="50"></textarea></div>
+                    <div class="textarea_embed--wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input textarea--messag" rows="10" cols="50"></textarea></div>
                   </div>
                 </div>
               </div>
