--- a/public/app/help.html
+++ b/public/app/help.html
@@ -431,7 +431,7 @@
               <div class="input_grid--wrap">
                 <div class="w-layout-grid input--grid">
                   <div class="input--wrap w-clearfix">
-                    <div class="textarea_embed--wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input textarea--messag" rows="10" cols="50"></textarea></div>
+                    <div class="textarea_embed--wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input textarea--message" rows="10" cols="50"></textarea></div>
                   </div>
                 </div>
               </div>
