Update CSS class on help page's textarea input
A typo in the CSS class name of the textarea input on the help.html page was corrected. The class name has been updated from "input_grid--wrap" to "input_grid--wrap textarea", fixing styling inconsistencies and assuring the input field is displayed properly.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -428,7 +428,7 @@
                 <div class="sect_block--text">Describe the issue you&#x27;re facing, along with any relevant information. Please be as detailed and specific as possible.</div>
               </div>
               <div class="sect_block--divider"></div>
-              <div class="input_grid--wrap">
+              <div class="input_grid--wrap textarea">
                 <div class="w-layout-grid input--grid">
                   <div class="input--wrap w-clearfix">
                     <div class="textarea_embed--wrap w-embed"><textarea autocomplete="off" help_input="message" type="search" class="ill_input textarea--message" rows="10" cols="50"></textarea></div>
