Add new SVG files and update CSS and HTML elements
New SVG files for attachment-upload and send buttons were added. Additionally, the background color on a CSS file was updated, as well as an element in the help.html file. These updates contribute to a better and smoother user interface.

--- a/public/app/help.html
+++ b/public/app/help.html
@@ -447,7 +447,7 @@
               <div class="sect_block--divider"></div>
               <div block_content="notify_team" class="action_btn--wrap w-clearfix">
                 <div class="action_btn_grid--wrap three">
-                  <div id="w-node-f20ecbfb-c705-3da5-25de-4ebbda7ffb3b-f21c92a1" class="attachment-btn"></div>
+                  <div  class="attachment-btn"></div>
                 </div>
               </div>
             </div>
